<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assign2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1_country">Add Country</string>
    <string name="title_activity_insert_country">InsertCountry</string>
    <string name="country">Insert Country:</string>
    <string name="year">Insert Year:</string>
    <string name="button2_country">Add</string>
    <string name="sortByYear">sort by year</string>
    <string name="sortByCountry">sort by country</string>
    <string name="sortOption">sort option</string>
    <string name="title_activity_alarm_clock">AlarmClock</string>
    <string name="country_setting">setting</string>
    <string name="title_activity_country_setting">CountrySetting</string>
    
    
    <string name="title_activity_mp3player">MP3 Player</string>
    <string name="nosd">Media storage is not available</string>
    <string name="error">Player crashed</string>
    <string name="addPlayLists">add playList</string>
    <string name="mp3PlayeMenu">menu</string>

</resources>
